##
## Copyright (C) 2022 Dan McMahill
## All rights reserved.
##
## 
## This program is free software; you can redistribute it and/or modify
## it under the terms of the GNU General Public License as published by
## the Free Software Foundation; version 2 of the License.
## 
## This program is distributed in the hope that it will be useful,
## but WITHOUT ANY WARRANTY; without even the implied warranty of
## MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
## GNU General Public License for more details.
## 
## You should have received a copy of the GNU General Public License
## along with this program; if not, write to the Free Software
## Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA  02110-1301  USA
## 

DAT_FILES= \
	coplanar.dat \
	microstrip.dat \
	stripline.dat

EDP_FILES= \
	coplanar.edp \
	coupled_microstrip.edp \
	io_example.edp \
	microstrip.edp \
	stripline.edp \
	utils.edp

EXTRA_DIST= \
	${DAT_FILES} \
	${EDP_FILES} \
	README.md \
	extract_coplanar.awk \
	extract_stripline.awk \
	wcalc_vs_freefem.ipynb

